--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: python
 python:
   - '2.7'
-install: bash -ex .travis-ocaml.sh
+install: bash -ex .travis-ocaml.sh && opam install ocamlfind && opam install ppx_deriving 
 sudo: required
 script: ./to_x86 && make min-caml && make do_test
 env:
